# interlink-condorce-plugin

./: .gitignore  Chart.yaml  README.md  config-podman.toml  index.html  logs  main.py  mkdocs.yml  natsplugin.py  pyproject.toml  search.html  values.yaml
.github/workflows/: build-container.yml  mkdocs.yml  publish-chart.yml
charts/interlink-all-in-one/: Chart.yaml  README.md  values.yaml
charts/interlink-nats-plugin/: values.yaml
condorprovider/: CondorConfiguration.py  CondorProvider.py  __init__.py  configuration.py  utils.py
condorprovider/apptainer_cmd_builder/: AppCompose.py  ApptainerCmdBuilder.py  __init__.py  configuration.py  containers.py  from_kubernetes.py  volumes.py
condorprovider/tests/: _auth.py  test_condor.py
configs/: podman-recas.cfg  slurm-test.cfg
docker/: Dockerfile  Dockerfile.condor  Dockerfile.podman  pilot.Dockerfile
docs/: architecture.md  deploy.md  index.md
docs/concepts/: kueue-nats.md  nats.md  pilot.md
docs/providers/: condor.md  kubernetes.md  podman.md  slurm.md
kueue-nats/: README.md  manifest.yaml
kueue-nats/docker/: Dockerfile  controller.py
landerlini/: 404.html  index.html  search.html  sitemap.xml
landerlini/architecture/: index.html
landerlini/deploy/: index.html
main/: 404.html  index.html  sitemap.xml
natsprovider/: BaseNatsProvider.py  NatsGateway.py  NatsSubmitter.py  SubmissionRecord.py  __init__.py  __main__.py  configuration.py  interlink.py  metrics.py  utils.py
templates/: NOTES.txt  authenticator.yaml  plugin.yaml  server.yaml  tunnel2nats.yaml  virtualnode.yaml
(+62 files in other folders)
